--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -430,6 +430,9 @@ jobs:
   #
 
   conda-build:
+    permissions:
+      contents: read
+      id-token: write
     needs: determine_changes
     if: ${{ needs.determine_changes.outputs.code == 'true' || github.ref == 'refs/heads/main' }}
     strategy:
