--- a/Cargo.toml
+++ b/Cargo.toml
@@ -150,6 +150,7 @@ reqwest-retry = { git = "https://github.com/astral-sh/reqwest-middleware", rev =
 rlimit = "0.10.2"
 rstest = "0.26.0"
 same-file = "1.0.6"
+schemars = "1.1.0"
 self-replace = "1.5.0"
 serde = "1.0.218"
 serde-untagged = "0.1.6"
