--- a/crates/pixi_build_frontend/Cargo.toml
+++ b/crates/pixi_build_frontend/Cargo.toml
@@ -24,6 +24,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["process", "io-std"] }
 tokio-util = { workspace = true, features = ["codec"] }
 tracing = { workspace = true }
+schemars = { workspace = true, optional = true }
 
 
 [dev-dependencies]
