--- a/crates/pixi_build_types/Cargo.toml
+++ b/crates/pixi_build_types/Cargo.toml
@@ -18,6 +18,7 @@ pixi_stable_hash = { workspace = true, features = [
 ] }
 rattler_conda_types = { workspace = true }
 rattler_digest = { workspace = true, features = ["serde"] }
+schemars = { workspace = true, optional = true, features = ["url2"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
