--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -18,6 +18,7 @@ targets = [
   "aarch64-apple-darwin",
   "aarch64-unknown-linux-musl",
   "aarch64-pc-windows-msvc",
+  "riscv64gc-unknown-linux-gnu",
   "x86_64-apple-darwin",
   "x86_64-unknown-linux-musl",
   "x86_64-pc-windows-msvc",
@@ -49,10 +50,14 @@ aarch64-pc-windows-msvc = "windows_x64_2025_large"
 x86_64-pc-windows-msvc = "windows_x64_2025_large"
 # Linux targets
 aarch64-unknown-linux-musl = "8core_ubuntu_latest_runner"
+riscv64gc-unknown-linux-gnu = "ubuntu-latest"
 x86_64-unknown-linux-musl = "8core_ubuntu_latest_runner"
 
 [dist.dependencies.apt]
 gcc-aarch64-linux-gnu = { version = '*', targets = [
   "aarch64-unknown-linux-gnu",
   "aarch64-unknown-linux-musl",
+] }
+gcc-riscv64-linux-gnu = { version = '*', targets = [
+  "riscv64gc-unknown-linux-gnu",
 ] }
