--- a/examples/pypi-source-deps/pixi.toml
+++ b/examples/pypi-source-deps/pixi.toml
@@ -15,23 +15,24 @@ test = "pytest ."
 python = "*"
 
 [pypi-dependencies]
-rich = "~=13.7"
+# rich = "~=13.7"
 
 # Let's start with some git dependencies
 # With ssh: (you need to have the correct ssh keys setup for which I (ruben) am to lazy to set up correctly)
 # flask = { git = "ssh://git@github.com/pallets/flask" }
 
 # With https
-flask = { git = "https://github.com/pallets/flask" }
-httpx = { git = "https://github.com/encode/httpx.git", rev = "c7c13f18a5af4c64c649881b2fe8dbd72a519c32" }
+# flask = { git = "https://github.com/pallets/flask" }
+# httpx = { git = "https://github.com/encode/httpx.git", rev = "c7c13f18a5af4c64c649881b2fe8dbd72a519c32" }
 
 # TODO: will support later -> or use branch = '' or tag = '' to specify a branch or tag
 
 # You can also directly add a source dependency from file
 minimal-project = { path = "./minimal-project", editable = true }
+setup-project = { path = "./setup-project", editable = true }
 
-# You can also use a direct url, to either a `.tar.gz` or `.zip`, or a `.whl` file
-click = { url = "https://github.com/pallets/click/releases/download/8.1.7/click-8.1.7-py3-none-any.whl" }
+# # You can also use a direct url, to either a `.tar.gz` or `.zip`, or a `.whl` file
+# click = { url = "https://github.com/pallets/click/releases/download/8.1.7/click-8.1.7-py3-none-any.whl" }
 
-# You can also just the default git repo, it will checkout the default branch
-pytest = { git = "https://github.com/pytest-dev/pytest.git" }
+# # You can also just the default git repo, it will checkout the default branch
+# pytest = { git = "https://github.com/pytest-dev/pytest.git" }
