feat(discovery): add support for discovering ROS packages and improve error messaging

--- a/crates/pixi_build_discovery/Cargo.toml
+++ b/crates/pixi_build_discovery/Cargo.toml
@@ -27,6 +27,7 @@ pixi_consts = { workspace = true }
 pixi_manifest = { workspace = true }
 pixi_spec = { workspace = true }
 pixi_spec_containers = { workspace = true }
+tracing = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true, features = [
