misc: treat dynamic version as an indicator to build dynamic metadata

--- a/examples/dynamic-source-deps/pixi.toml
+++ b/examples/dynamic-source-deps/pixi.toml
@@ -15,5 +15,6 @@ test = "pytest ."
 python = "*"
 
 [pypi-dependencies]
-minimal-project = { path = "./minimal-project" }
-setup-project = { path = "./setup-project" }
+# minimal-project = { path = "./minimal-project" }
+# setup-project = { path = "./setup-project" }
+ribasim-test = { path = "./ribasim-test", extras = ["all"] }
