--- a/crates/pixi_record/Cargo.toml
+++ b/crates/pixi_record/Cargo.toml
@@ -10,11 +10,9 @@ repository.workspace = true
 version = "0.1.0"
 
 [dependencies]
-dunce = { workspace = true }
 file_url = { workspace = true }
 itertools = { workspace = true }
 miette = { workspace = true }
-pathdiff = { workspace = true }
 pixi_git = { workspace = true }
 pixi_spec = { workspace = true, features = ["rattler_lock"] }
 pixi_spec_containers = { workspace = true }
@@ -22,6 +20,7 @@ pixi_variant = { workspace = true, features = [
   "rattler_lock",
   "pixi_build_types",
 ] }
+pixi_path = { workspace = true }
 rattler_conda_types = { workspace = true }
 rattler_digest = { workspace = true, features = ["serde"] }
 rattler_lock = { workspace = true }
@@ -33,4 +32,3 @@ url = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true, features = ["yaml"] }
-serde_json = { workspace = true }
