fix: remove flaky test and fix online test

--- a/tests/data/pixi-build/simple-package/pixi.toml
+++ b/tests/data/pixi-build/simple-package/pixi.toml
@@ -3,5 +3,9 @@ channels = ["https://prefix.dev/conda-forge"]
 preview = ["pixi-build"]
 
 [package.build.backend]
+channels = [
+  "https://prefix.dev/pixi-build-backends",
+  "https://prefix.dev/conda-forge",
+]
 name = "pixi-build-rattler-build"
 version = "*"
