--- a/examples/pixi-build/array-api-extra/pixi.toml
+++ b/examples/pixi-build/array-api-extra/pixi.toml
@@ -1,12 +1,12 @@
 [workspace]
-channels = ["https://prefix.dev/conda-forge"]
+channels = [ "https://prefix.dev/conda-forge" ]
 name = "array-api-extra-build"
 platforms = ["osx-arm64", "linux-64", "osx-64", "win-64"]
 preview = ["pixi-build"]
 version = "0.1.0"
 
 [dependencies]
-array-api-extra = { path = "recipe.yaml" }
+array-api-extra = { path = "." }
 
 [tasks]
 test = "python -c 'import array_api_extra'"
