--- a/docs/source_files/pixi_tomls/pixi-build-backend-channel.toml
+++ b/docs/source_files/pixi_tomls/pixi-build-backend-channel.toml
@@ -5,7 +5,7 @@ preview = ["pixi-build"]
 
 # --8<-- [start:build]
 [package.build]
-backend = { name = "pixi-build-python", version = "==0.4.0" }
+backend = { name = "pixi-build-python", version = "0.4.*" }
 channels = [
   "https://prefix.dev/pixi-build-backends",
   "https://prefix.dev/conda-forge",
