misc: remove hash from the record

--- a/examples/dynamic-source-deps/pixi.toml
+++ b/examples/dynamic-source-deps/pixi.toml
@@ -18,3 +18,4 @@ python = "*"
 minimal-project = { path = "./minimal-project" }
 ribasim-test = { path = "./ribasim-test", extras = ["all"] }
 setup-project = { path = "./setup-project" }
+# boltons = "*"
