--- a/examples/dynamic-source-deps/pixi.toml
+++ b/examples/dynamic-source-deps/pixi.toml
@@ -15,6 +15,7 @@ test = "pytest ."
 python = "*"
 
 [pypi-dependencies]
+hatch-vcs-project = { path = "./hatch-vcs-project" }
 minimal-project = { path = "./minimal-project" }
 ribasim-test = { path = "./ribasim-test", extras = ["all"] }
 setup-project = { path = "./setup-project" }
