--- a/tests/data/channels/mappings.toml
+++ b/tests/data/channels/mappings.toml
@@ -8,6 +8,7 @@
 "global_prefix_ignore_channel/recipe.yaml" = "global_prefix_ignore_channel"
 "multiple_versions_channel_1_010.yaml" = "multiple_versions_channel_1"
 "multiple_versions_channel_1_020.yaml" = "multiple_versions_channel_1"
+"multiple_versions_channel_1_030.yaml" = "multiple_versions_channel_1"
 "non_self_expose_channel_1.yaml" = "non_self_expose_channel_1"
 "non_self_expose_channel_2.yaml" = "non_self_expose_channel_2"
 "post_link_script_package/recipe.yaml" = "post_link_script_channel"
