--- a/.github/workflows/backends-ros.yml
+++ b/.github/workflows/backends-ros.yml
@@ -33,7 +33,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: prefix-dev/setup-pixi@main
+          persist-credentials: false
+      - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
         with:
           manifest-path: pixi-build-backends/backends/pixi-build-ros/pixi.toml
       - name: Run mypy
