--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ exclude = [
   "pixi-build-backends",
   "tests/data",
   "trampoline",
-  "pytest-temp"
+  "pytest-temp",
 ]
 members = ["crates/*"]
 resolver = "3"
@@ -31,13 +31,13 @@ assert_matches = "1.5.0"
 async-fd-lock = "0.2.0"
 async-once-cell = "0.5.4"
 async-trait = "0.1.86"
-cargo_toml = "0.22.3"
-clap-verbosity-flag = "3.0.2"
 axum = "0.8"
 barrier_cell = { path = "crates/barrier_cell" }
 base64 = "0.22.1"
+cargo_toml = "0.22.3"
 chrono = "0.4.40"
 clap = { version = "4.5.31", default-features = false }
+clap-verbosity-flag = "3.0.2"
 clap_complete = "4.5.46"
 clap_complete_nushell = "4.5.5"
 # Rattler crates
@@ -45,7 +45,6 @@ coalesced_map = "0.1.2"
 comfy-table = "7.2.1"
 console = "0.16.1"
 # Force crc to 3.3.0 to satisfy both lzma-rs (^3.0.0) and lzma-rust2 (=3.3.0)
-crc = "=3.3.0"
 console-subscriber = "0.5.0"
 crossbeam-channel = "0.5.14"
 csv = "1.3.1"
@@ -132,16 +131,12 @@ pixi_uv_conversions = { path = "crates/pixi_uv_conversions" }
 pixi_variant = { path = "crates/pixi_variant" }
 # Pixi build backends
 pixi-build-backend = { path = "crates/pixi-build-backend" }
-pixi-build-cmake = { path = "crates/pixi-build-cmake" }
-pixi-build-mojo = { path = "crates/pixi-build-mojo" }
-pixi-build-python = { path = "crates/pixi-build-python" }
-pixi-build-rattler-build = { path = "crates/pixi-build-rattler-build" }
-pixi-build-rust = { path = "crates/pixi-build-rust" }
 pypi_mapping = { path = "crates/pypi_mapping" }
 pypi_modifiers = { path = "crates/pypi_modifiers" }
 pyproject-toml = "0.13.7"
 rand = { version = "0.9.1", default-features = false }
 rattler = { version = "0.39.0", default-features = false }
+rattler-build = { git = "https://github.com/prefix-dev/rattler-build", branch = "main", default-features = false }
 rattler_cache = { version = "0.6.2", default-features = false }
 rattler_conda_types = { version = "0.42.0", default-features = false, features = [
   "rayon",
@@ -161,7 +156,6 @@ rattler_upload = { version = "0.4.5", default-features = false, features = [
   "s3",
 ] }
 rattler_virtual_packages = { version = "2.3.0", default-features = false }
-rattler-build = { git = "https://github.com/prefix-dev/rattler-build", branch = "main", default-features = false }
 rayon = "1.10.0"
 recipe-stage0 = { path = "crates/recipe-stage0" }
 regex = "1.11.1"
