Set upper bound

--- a/pixi-build-backends/recipe/pixi-build-ros/recipe.yaml
+++ b/pixi-build-backends/recipe/pixi-build-ros/recipe.yaml
@@ -23,7 +23,7 @@ requirements:
     - pyyaml
     - py-rattler
     - typing-extensions
-    - py-pixi-build-backend >=0.4.1
+    - py-pixi-build-backend >=0.4.1,<0.5
 
 build:
   number: 0
