Fix ros pixi toml

--- a/pixi-build-backends/backends/pixi-build-ros/pixi.toml
+++ b/pixi-build-backends/backends/pixi-build-ros/pixi.toml
@@ -18,7 +18,7 @@ mold = ">=2.33.0,<3.0"
 patchelf = "==0.18.0"
 
 [target.linux-64.activation]
-scripts = ["../../scripts/activate.sh"]
+scripts = ["../../../scripts/activate.sh"]
 
 [dependencies]
 py-pixi-build-backend = "*"
